# libseq

./: CMakeLists.txt
examples/: StringSequenceable.cpp  StringSequenceable.h  consoleExample.cpp  consoleExample.h
lib/: Sequencer.cpp  Sequencer.h  Track.cpp  Track.h  frameParameter.cpp  frameParameter.h  libseq.cpp  libseq.h  sequenceable.cpp  sequenceable.h
